--- a/app/src/main/res/layout/plantillalistasrecursos.xml
+++ b/app/src/main/res/layout/plantillalistasrecursos.xml
@@ -18,7 +18,7 @@
     <ListView
         android:id="@+id/lstelectr"
         style="@style/Base.Widget.AppCompat.ListView.DropDown"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="0dp"
         android:background="@color/colorlistas"
