--- a/app/src/main/res/menu/mimenu.xml
+++ b/app/src/main/res/menu/mimenu.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-
-
     >
+
 
 
     <item android:id="@+id/mAcercaDe"
@@ -11,10 +10,13 @@
     <item android:id="@+id/mBucar"
         app:showAsAction="always"
         android:title="Buscar"
+        android:icon="@drawable/ic_info_outline_black_24dp"
+        android:iconTint="@color/colorblan"
+
         ></item>
 
     <item android:id="@+id/mAlbum"
-        android:title="Album"
+        android:title="Feeback"
         ></item>
 
 </menu>
